--- a/style.css
+++ b/style.css
@@ -1,1 +1,118 @@
-*{margin: 0; padding: 0; box-sizing: border-box;}body{font-family: sans-serif; overflow-x: hidden;}.intro{height: 100vh;}.intro video{height: 100%; width: 100%; object-fit: cover;}.intro h1{position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 80px; color: white; z-index: 1; transition: 1.1s ease all; transition-delay: .2s; cursor: pointer;}.intro h1:hover{opacity: 0;}section{height: 110vh; display: flex; align-items: center; justify-content: center; color: black;}section h2{text-align: center; font-size: 80px;}.footer{background-color: black; color: white; display: flex; flex-direction: column;}.footer a{text-decoration: none; color: white; margin: 30px;}.social{margin-top: 10px;}.social a svg{transition: .5s ease all;}.social a svg:hover{animation: rotating 2s ease; animation: name duration timing-function delay iteration-count direction fill-mode;}@keyframes rotating{0%{transform: rotate(0deg) scale(1);}25%{transform: rotate(30deg) scale(1.2);}50%{transform: rotate(0deg) scale(1.2);}75%{transform: rotate(-30deg) scale(1.2);}100%{transform: rotate(0deg) scale(1);}}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: sans-serif;
+  overflow-x: hidden;
+}
+.intro {
+  height: 100vh;
+}
+.intro video {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+.intro h1 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 80px;
+  color: white;
+  z-index: 1;
+  transition: 1.1s ease all;
+  transition-delay: 0.2s;
+  cursor: pointer;
+}
+.intro h1:hover {
+  opacity: 0;
+}
+section {
+  height: 110vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: black;
+}
+section h2 {
+  text-align: center;
+  font-size: 80px;
+}
+.footer {
+  background-color: black;
+  color: white;
+  display: flex;
+  flex-direction: column;
+}
+
+@keyframes rotating {
+  0% {
+    transform: rotate(0deg) scale(1);
+  }
+  25% {
+    transform: rotate(30deg) scale(1.2);
+  }
+  50% {
+    transform: rotate(0deg) scale(1.2);
+  }
+  75% {
+    transform: rotate(-30deg) scale(1.2);
+  }
+  100% {
+    transform: rotate(0deg) scale(1);
+  }
+}
+
+@media (max-width: 1100px) {
+  h1 {
+    white-space: nowrap;
+    font-size: 1.5em;
+  }
+
+  .outro video {
+    width: 100%;
+  }
+}
+
+@media (max-width: 800px) {
+  section h2 {
+    text-align: center;
+    font-size: 64px;
+  }
+}
+
+@media (max-width: 625px) {
+  .intro h1 {
+    font-size: 65px;
+  }
+
+  section h2 {
+    text-align: center;
+    font-size: 56px;
+  }
+}
+
+@media (max-width: 510px) {
+  .intro h1 {
+    font-size: 50px;
+  }
+
+  section h2 {
+    text-align: center;
+    font-size: 45px;
+  }
+}
+
+@media (max-width: 420px) {
+  .intro h1 {
+    font-size: 40px;
+  }
+
+  section h2 {
+    text-align: center;
+    font-size: 35px;
+  }
+}
